# flutter-tree-sitter-python

./: .gitignore  LICENSE  Makefile  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: release.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
example/lib/: main.dart
example/test/: widget_test.dart
ios/: flutter_tree_sitter_python.podspec  tree_sitter_python.podspec
ios/Classes/: tree_sitter_python.c
lib/: bindings.g.dart  flutter_tree_sitter_python.dart  highlight.dart  lib.dart
lib/src/: bindings.g.dart  lib.dart
linux/: CMakeLists.txt
macos/: flutter_tree_sitter_python.podspec  tree_sitter_python.podspec
src/: CMakeLists.txt  tree_sitter_python.c
windows/: CMakeLists.txt
